--- a/src/main/webapp/assets/css/mainSite.css
+++ b/src/main/webapp/assets/css/mainSite.css
@@ -1,18 +1,24 @@
 
+#addSubCategory{
+    background: #fff;
+    padding: 10px;
+    border: 1px solid #ddd;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);
+}
 section {
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
 
 .navbar{
-     margin-bottom:100px;
+    margin-bottom:100px;
 }
 
 .services-icon {
     margin-bottom: 20px;
     font-size: 30px;
 }
- 
+
 .quote-icon {
     font-size: 40px;
     margin-bottom: 20px;
@@ -149,50 +155,50 @@ section .section-title {
 
 
 
- .p0 {
-            padding: 0;
-        }
-
-        .resCarousel-inner .item {
-            /*border: 4px solid #eee;*/
-            /*vertical-align: top;*/
-            text-align: center;
-        }
-
-        .resCarousel-inner .item .tile div,
-        .banner .item div {
-            display: table;
-            width: 100%;
-            min-height: 250px;
-            text-align: center;
-            /*box-shadow: 0 1px 1px rgba(0, 0, 0, .1);*/
-        }
-
-        .resCarousel-inner .item h1 {
-            display: table-cell;
-            vertical-align: middle;
-            color: white;
-        }
-
-        .banner .item div {
-            background-size: cover;
-            min-height: 350px;
-        }
-
-        .item .tile div {
-            background: url('assets/img/demoImg.jpg') center center no-repeat;
-            background-size: cover;
-            height: 200px;
-            color: white;
-        }
-
-        .item div h1 {
-            background: rgba(0, 0, 0, .4);
-        }
-.navbar-nav li a{
-color:#fff;
+.p0 {
+    padding: 0;
 }
 
-        .navbar{
-        background-image: linear-gradient(45deg, #43a047, #1de9b6) !important;
-        }
+.resCarousel-inner .item {
+    /*border: 4px solid #eee;*/
+    /*vertical-align: top;*/
+    text-align: center;
+}
+
+.resCarousel-inner .item .tile div,
+.banner .item div {
+    display: table;
+    width: 100%;
+    min-height: 250px;
+    text-align: center;
+    /*box-shadow: 0 1px 1px rgba(0, 0, 0, .1);*/
+}
+
+.resCarousel-inner .item h1 {
+    display: table-cell;
+    vertical-align: middle;
+    color: white;
+}
+
+.banner .item div {
+    background-size: cover;
+    min-height: 350px;
+}
+
+.item .tile div {
+    background: url('assets/img/demoImg.jpg') center center no-repeat;
+    background-size: cover;
+    height: 200px;
+    color: white;
+}
+
+.item div h1 {
+    background: rgba(0, 0, 0, .4);
+}
+.navbar-nav li a{
+    color:#fff;
+}
+
+.navbar{
+    background-image: linear-gradient(45deg, #43a047, #1de9b6) !important;
+}
